--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "autosize": "^5.0.1",
     "axios": "^0.27.2",
     "luxon": "^3.0.3",
     "react": "^18.2.0",
